syntax = "proto3";
package botrpc;

service BotService {
  rpc ReloadVm(GuildScriptSpecifier) returns (Empty);
  rpc PurgeGuildCache(GuildScriptSpecifier) returns (Empty);
  rpc VmWorkerStatus(Empty) returns (VmWorkerStatusResponse);
  rpc GuildStatus(GuildSpecifier) returns (GuildStatusResponse);
  rpc StreamGuildLogs(GuildSpecifier) returns (stream GuildLogItem);
}

message Empty {}

message GuildSpecifier { fixed64 guild_id = 1; }

message VmSpecifier {
  oneof specifier {
    Empty guild = 1;
    uint64 pack = 2;
  }
}

message GuildScriptSpecifier {
  fixed64 guild_id = 1;
  VmSpecifier script = 2;
}

message GuildLogItem {
  fixed64 guild_id = 1;
  LogLevel level = 2;
  string message = 3;
  ScriptContext script_context = 4;
}

message ScriptContext {
  string filename = 1;
  LineCol line_col = 2;
}

message LineCol {
  uint32 line = 1;
  uint32 column = 2;
}

enum LogLevel {
  CRITICAL = 0;
  ERROR = 1;
  WARN = 2;
  INFO = 3;
  CONSOLE_LOG = 4;
}

message VmWorkerStatusResponse { repeated VmWorkerStatus workers = 1; }

message VmWorkerStatus {
  uint32 worker_id = 1;
  optional fixed64 currently_claimed_by_guild_id = 2;
  optional fixed64 last_claimed_by_guild_id = 3;
  uint64 claimed_last_ms_ago = 4;
  uint64 returned_last_ms_ago = 5;
}

message GuildStatusResponse {
  optional uint32 current_claimed_worker_id = 1;
  optional uint32 last_claimed_worker_id = 2;
  uint64 claimed_last_since_ms = 3;
  uint64 returned_last_since_ms = 4;
  uint32 pending_acks = 5;
}